@@ -1,2 +1,9 @@
 # Bachelorthesis
 "Einfach Genial"
+
+Es wurde build automation verwendet.
+
+Auszuführende Klasse ist die Klasse Gui.java.
+Sollte die Klasse nicht ausführbar sein, fehlt der Verweis auf die JavaFX Runtime Komponente durch VM Arguments.
+
+In die VM Arguments muss folgendes eigefügt werden: --module-path="Add\path\to\JavaFX\lib" --add-modules=javafx.controls,javafx.fxml
